--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,20 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+# Ignore output
+/output
+
+# Ignore input/model
+# /input/model
+# /input/model/autoencoder
+# /input/model/clip
+# /input/model/unet
+# Ignore all downloaded models, we don't have enough storage for that!
+/input/
+*.ckpt
+*.safetensors
+*.pt
+# Ignore cache
+/stable_diffusion/cache
+/io/input/model/clip/text_embedder/clip-vit-large-patch14/
