Add --host 0.0.0.0 in docker build config

--- a/docker/Dockerfile.orchestration
+++ b/docker/Dockerfile.orchestration
@@ -4,5 +4,5 @@ WORKDIR /orchestration
 COPY ./requirements.txt /orchestration/requirements.txt
 RUN pip install -r /orchestration/requirements.txt
 COPY ./orchestration /orchestration/orchestration
-
-CMD ["uvicorn", "orchestration.api.main:app", "--port", "8000"]
+EXPOSE 8000
+CMD ["uvicorn", "orchestration.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
