Add separate requirements for orchestration so it wont add unnecessary packages in its image

--- a/docker/Dockerfile.orchestration
+++ b/docker/Dockerfile.orchestration
@@ -1,7 +1,7 @@
 FROM python:3.8
 
 WORKDIR /orchestration
-COPY ./requirements.txt /orchestration/requirements.txt
+COPY ./requirements_orchestration.txt /orchestration/requirements.txt
 RUN pip install -r /orchestration/requirements.txt
 COPY ./orchestration /orchestration/orchestration
 EXPOSE 8000
