--- a/docker/Dockerfile.orchestration
+++ b/docker/Dockerfile.orchestration
@@ -4,5 +4,7 @@ WORKDIR /orchestration
 COPY ./requirements_orchestration.txt /orchestration/requirements.txt
 RUN pip install -r /orchestration/requirements.txt
 COPY ./orchestration /orchestration/orchestration
+COPY ./utility /orchestration/utility
+
 EXPOSE 8000
 CMD ["uvicorn", "orchestration.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
