--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -6,7 +6,7 @@ WORKDIR /kcg-ml-image-pipeline
 
 # create clip model dir and copy model
 RUN mkdir -p /.cache/huggingface/hub
-COPY ~/.cache/huggingface/hub/models--openai--clip-vit-large-patch14 /.cache/huggingface/hub
+COPY ~/.cache/huggingface/hub/models--openai--clip-vit-large-patch14 /.cache/huggingface/hub/models--openai--clip-vit-large-patch14
 
 # install prerequisites
 RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install -y python-is-python3
