--- a/docker/Dockerfile.ranking_app
+++ b/docker/Dockerfile.ranking_app
@@ -3,6 +3,14 @@ FROM python:3.8
 WORKDIR /ranking
 COPY ./requirements_ranking_app.txt /ranking/requirements.txt
 
+# create env
+RUN python3.8 -m venv env
+
+COPY ./app_ranking/share/solara /ranking/env/share/solara
+
+# activate env
+RUN source /ranking/env/bin/activate
+
 RUN pip install -r /ranking/requirements.txt
 COPY ./app_ranking /ranking/app_ranking
 
