--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -5,8 +5,9 @@ COPY ./ /kcg-ml-image-pipeline
 WORKDIR /kcg-ml-image-pipeline
 
 # create clip model dir and copy model
-RUN mkdir -p /.cache/huggingface/hub
-COPY ~/.cache/huggingface/hub/models--openai--clip-vit-large-patch14 /.cache/huggingface/hub/models--openai--clip-vit-large-patch14
+RUN mkdir -p /.cache/huggingfaceb
+COPY ./hub /.cache/huggingface/hub
+RUN chmod -R 777 /.cache
 
 # install prerequisites
 RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install -y python-is-python3
