Add env to dockerfile

--- a/docker/Dockerfile.selection_datapoints_aggregator
+++ b/docker/Dockerfile.selection_datapoints_aggregator
@@ -5,5 +5,6 @@ COPY ./requirements_scheduled_workers.txt /aggregator/requirements.txt
 RUN pip install -r /aggregator/requirements.txt
 COPY ./scheduled_workers /aggregator/scheduled_workers
 COPY ./utility /aggregator/utility
+ENV PYTHONUNBUFFERED=1
 
 ENTRYPOINT ["/aggregator/scheduled_workers/run_worker.sh"]
