--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -5,7 +5,7 @@ COPY ./ /kcg-ml-image-pipeline
 WORKDIR /kcg-ml-image-pipeline
 
 # create clip model dir and copy model
-RUN mkdir -p /.cache/huggingfaceb
+RUN mkdir -p /.cache/huggingface
 COPY ./hub /.cache/huggingface/hub
 RUN chmod -R 777 /.cache
 
