--- a/docker/Dockerfile.prompt_job_generator
+++ b/docker/Dockerfile.prompt_job_generator
@@ -4,6 +4,8 @@ FROM docker.io/nvidia/cuda:11.3.1-cudnn8-runtime-ubuntu20.04
 COPY ./ /kcg-ml-image-pipeline
 WORKDIR /kcg-ml-image-pipeline
 
+COPY ./requirements.txt /kcg-ml-image-pipeline/requirements.txt
+
 # create clip model dir and copy model
 RUN mkdir -p /.cache/huggingface
 COPY ./hub /.cache/huggingface/hub
@@ -14,6 +16,6 @@ RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install 
 RUN apt-get install -y unzip
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0 libsndfile1 wget libgl1-mesa-glx
 
-RUN python3 -m pip install -r /kcg-ml-image-pipeline/requirements.txt
+RUN pip install -r /kcg-ml-image-pipeline/requirements.txt
 
 ENTRYPOINT ["/kcg-ml-image-pipeline/prompt_job_generator/prompt_job_generator.sh"]
