--- a/orchestration/api/.env
+++ b/orchestration/api/.env
@@ -1,3 +1,3 @@
 DB_URL=mongodb://localhost:27017/
-MINIO_ACCESS_KEY=3lUCPCfLMgQoxrYaxgoz
-MINIO_SECRET_KEY=MXszqU6KFV6X95Lo5jhMeuu5Xm85R79YImgI3Xmp
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
