--- a/docker/Dockerfile.training_worker
+++ b/docker/Dockerfile.training_worker
@@ -8,6 +8,7 @@ COPY ./requirements.txt /training_worker/requirements.txt
 COPY ./requirements_scheduled_workers.txt /training_worker/requirements_scheduled_workers.txt
 
 # install prerequisites
+RUN echo 'Acquire::http::Proxy "http://192.168.3.1:3142/";' > /etc/apt/apt.conf.d/squid-deb-proxy.conf
 RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install -y python-is-python3
 RUN apt-get install -y unzip
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0 libsndfile1 wget libgl1-mesa-glx
