--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -5,6 +5,7 @@ COPY ./ /kcg-ml-image-pipeline
 WORKDIR /kcg-ml-image-pipeline
 
 # install prerequisites
+RUN echo 'Acquire::http::Proxy "http://192.168.3.1:3142/";' > /etc/apt/apt.conf.d/squid-deb-proxy.conf
 RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install -y python-is-python3
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0 libsndfile1 wget libgl1-mesa-glx
 
