--- a/orchestration/api/.env
+++ b/orchestration/api/.env
@@ -1,3 +1,5 @@
 DB_URL=mongodb://localhost:27017/
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
+JWT_SECRET_KEY=yb4sG7o3yeU3npwsdSDYwUHYt2dEFneDN-9brXVazes
+JWT_REFRESH_SECRET_KEY=_6bmu4SirWvD5mmPCtTXDeESgkZA354j0jG4dAOpd2g
