--- a/docker/Dockerfile.training_worker
+++ b/docker/Dockerfile.training_worker
@@ -6,6 +6,7 @@ COPY ./training_worker /training_worker/training_worker
 COPY ./scripts/ab_ranking_elm_v1.py /training_worker/scripts/ab_ranking_elm_v1.py
 COPY ./scripts/ab_ranking_linear.py /training_worker/scripts/ab_ranking_linear.py
 COPY ./utility /training_worker/utility
+COPY ./worker/http/request.py /training_worker/worker/http/request.py
 COPY ./requirements.txt /training_worker/requirements.txt
 COPY ./requirements_scheduled_workers.txt /training_worker/requirements_scheduled_workers.txt
 
