--- a/docker/Dockerfile.clip_server
+++ b/docker/Dockerfile.clip_server
@@ -12,5 +12,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libasound-dev portaudio19-
 RUN pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 RUN pip config set global.trusted-host 192.168.3.1
 RUN pip install -r /kcg-ml-image-pipeline/requirements.txt
+RUN pip install -r /kcg-ml-image-pipeline/requirements_clip_server.txt
 
-ENTRYPOINT ["/kcg-ml-image-pipeline/clip_server/run_clip_server.sh"]
+EXPOSE 8002
+CMD ["uvicorn", "clip_server.main:app", "--host", "0.0.0.0", "--port", "8002"]
