--- a/docker/Dockerfile.orchestration
+++ b/docker/Dockerfile.orchestration
@@ -7,4 +7,4 @@ COPY ./orchestration /orchestration/orchestration
 COPY ./utility /orchestration/utility
 
 EXPOSE 8000
-CMD ["uvicorn", "orchestration.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "orchestration.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "16"]
