--- a/docker/Dockerfile.training_worker
+++ b/docker/Dockerfile.training_worker
@@ -8,6 +8,7 @@ COPY ./scripts/ab_ranking_linear.py /training_worker/scripts/ab_ranking_linear.p
 COPY ./utility /training_worker/utility
 COPY ./worker/http/request.py /training_worker/worker/http/request.py
 COPY ./data_loader /training_worker/data_loader
+COPY ./stable_diffusion /training_worker/stable_diffusion
 COPY ./requirements.txt /training_worker/requirements.txt
 COPY ./requirements_scheduled_workers.txt /training_worker/requirements_scheduled_workers.txt
 
