--- a/orchestration/api/.env
+++ b/orchestration/api/.env
@@ -1,4 +1,4 @@
-DB_URL=mongodb://localhost:27017/
+DB_URL=mongodb://192.168.3.1:32017/
 MINIO_ADDRESS=192.168.3.5:9000
 MINIO_ACCESS_KEY=v048BpXpWrsVIHUfdAix
 MINIO_SECRET_KEY=4TFS20qkxVuX2HaC8ezAgG7GaDlVI1TqSPs0BKyu
