--- a/docker/Dockerfile.ranking_app
+++ b/docker/Dockerfile.ranking_app
@@ -9,7 +9,7 @@ RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 COPY ./app_ranking/share/solara /ranking/env/share/solara
-
+RUN pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 RUN pip install -r /ranking/requirements.txt
 COPY ./app_ranking /ranking/app_ranking
 
