--- a/docker/Dockerfile.training_worker
+++ b/docker/Dockerfile.training_worker
@@ -17,11 +17,10 @@ RUN echo 'Acquire::http::Proxy "http://192.168.3.1:3142/";' > /etc/apt/apt.conf.
 RUN apt-get update && apt-get install -y python3 python3-pip && apt-get install -y python-is-python3
 RUN apt-get install -y unzip
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0 libsndfile1 wget libgl1-mesa-glx
-
+RUN pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 RUN pip install -r /training_worker/requirements.txt
 RUN pip install -r /training_worker/requirements_scheduled_workers.txt
 
 # for tiktoken
-RUN python -c "import tiktoken; tiktoken.get_encoding("cl100k_base")"
-
+RUN python3 -c "import tiktoken; tiktoken.get_encoding('cl100k_base')"
 ENTRYPOINT ["/training_worker/training_worker/run_training_worker.sh"]
