--- a/docker/Dockerfile.training_worker
+++ b/docker/Dockerfile.training_worker
@@ -2,16 +2,7 @@ FROM docker.io/nvidia/cuda:11.3.1-cudnn8-runtime-ubuntu20.04
 
 # Copy repo
 WORKDIR /training_worker
-COPY ./training_worker /training_worker/training_worker
-COPY ./input/model/active_learning /training_worker/input/model/active_learning
-COPY ./scripts /training_worker/scripts
-COPY ./prompt_job_generator /training_worker/prompt_job_generator
-COPY ./worker /training_worker/worker
-COPY ./utility /training_worker/utility
-COPY ./data_loader /training_worker/data_loader
-COPY ./stable_diffusion /training_worker/stable_diffusion
-COPY ./requirements.txt /training_worker/requirements.txt
-COPY ./requirements_scheduled_workers.txt /training_worker/requirements_scheduled_workers.txt
+COPY ./ /training_worker
 
 # install prerequisites
 RUN echo 'Acquire::http::Proxy "http://192.168.3.1:3142/";' > /etc/apt/apt.conf.d/squid-deb-proxy.conf
